p2ws_package/Devpp2ws-Package/objects/Case.object
<CustomObject>
    <fields>
        <fullName>Investigated_by__c</fullName>
        <label>Investigated by</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Investigated_to_Closed__c</fullName>
        <label>Investigated to Closed</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Investigation_Comment__c</fullName>
        <label>Investigation Comment</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Investigation_Type__c</fullName>
        <label>Investigation Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Accident/Injuries</fullName>
                </value>
                <value>
                    <fullName>Baggage Handling</fullName>
                </value>
                <value>
                    <fullName>Defect/Malfunction</fullName>
                </value>
                <value>
                    <fullName>Denied Onboard</fullName>
                </value>
                <value>
                    <fullName>Excess Baggage</fullName>
                </value>
                <value>
                    <fullName>Irregularities Handling</fullName>
                </value>
                <value>
                    <fullName>Meal Onboard</fullName>
                </value>
                <value>
                    <fullName>Performance of staff</fullName>
                </value>
                <value>
                    <fullName>Punctuality of flights</fullName>
                </value>
                <value>
                    <fullName>Reservation/Ticketing</fullName>
                </value>
                <value>
                    <fullName>Disruptive/Unruly Passenger</fullName>
                </value>
                <value>
                    <fullName>Upgrading/Downgrading</fullName>
                </value>
                <value>
                    <fullName>Others</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Irregularity_Handling__c</fullName>
        <label>Irregularity Handling</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>IsFirst_Platinum__c</fullName>
        <description>Displays whether the passenger related to the case is a first class passenger or a platinum tier passenger</description>
        <formula>IF( Accepted_Class__c == &quot;F&quot; || ROP_Tier__c == &quot;PLAT&quot; , true , false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IsFirst_Platinum</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Upgrade_Seat_Case__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Displays whether this case concerns seat upgrading</description>
        <label>Is Upgrade Seat Case</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Isowner__c</fullName>
        <description>Displays whether the current user is the case owner</description>
        <formula>IF(Owner:User.Id ==  $User.Id , &quot;true&quot;, &quot;false&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Isowner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Issue_Date__c</fullName>
        <label>Issue Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Json_Body__c</fullName>
        <description>Source</description>
        <label>Json Body</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>LCD_Attachment_Amount__c</fullName>
        <defaultValue>0</defaultValue>
        <label>LCD Attachment Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LCD_Detail__c</fullName>
        <label>LCD Detail</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lack_of_Part__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Displays if the reason the maintenance case is still open is because of lacking parts</description>
        <label>Lack of Part</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Lack_of_Time__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Displays if the reason the maintenance case is still open is because of lacking time</description>
        <label>Lack of Time</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Language_Preference__c</fullName>
        <label>Language Preference</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Name_txt__c</fullName>
        <label>Last Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Latest_Document__c</fullName>
        <label>Latest Document</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Latest_Template__c</fullName>
        <label>Latest Template</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LetterEN_Attachment_Amount__c</fullName>
        <defaultValue>0</defaultValue>
        <label>LetterEN Attachment Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LetterTH1_Attachment_Amount__c</fullName>
        <defaultValue>0</defaultValue>
        <label>LetterTH1 Attachment Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LetterTH2_Attachment_Amount__c</fullName>
        <defaultValue>0</defaultValue>
        <label>LetterTH2 Attachment Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Letter_Body__c</fullName>
        <label>Letter Body</label>
        <length>130000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Letter_Bodyid__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Letter Body</label>
        <lookupFilter>
            <active>false</active>
            <filterItems>
                <field>Letter_Master__c.Letter_Language__c</field>
                <operation>equals</operation>
                <valueField>$Source.Letter_Language__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Letter_Master__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Letter_Language__c</fullName>
        <label>Letter Language</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>TH</fullName>
                </value>
                <value>
                    <fullName>EN</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Local_Name__c</fullName>
        <label>Local Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Log_Type__c</fullName>
        <formula>IF( MID( SEQ_No_Display__c , 6, 1) = &quot;C&quot;, &quot;Cabin Log&quot;, &quot;Flight Log&quot;)</formula>
        <label>Log Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lounge_Location__c</fullName>
        <label>Lounge Location</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Case_Type__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>ROYAL SILK LOUNGE (A2-1) Domestic</fullName>
                </value>
                <value>
                    <fullName>ROYAL SILK LOUNGE (C3-1)</fullName>
                </value>
                <value>
                    <fullName>ROYAL SILK LOUNGE (C3-2)</fullName>
                </value>
                <value>
                    <fullName>ROYAL SILK LOUNGE (D3-1)</fullName>
                </value>
                <value>
                    <fullName>ROYAL FIRST LOUNGE (D3-F)</fullName>
                </value>
                <value>
                    <fullName>ROYAL SILK LOUNGE (E3-1)</fullName>
                </value>
                <value>
                    <fullName>ROYAL ORCHID LOUNGE (E3-2)</fullName>
                </value>
                <value>
                    <fullName>ROYAL ORCHID LOUNGE (E3-F) FIRST CLASS</fullName>
                </value>
                <value>
                    <fullName>ROYAL ORCHID LOUNGE (E3-F)   FIRST CLASS</fullName>
                </value>
                <value>
                    <fullName>ROYAL SILK LOUNGE (A2-1)   Domestic</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Mobile_App_Key__c</fullName>
        <externalId>true</externalId>
        <label>Mobile App Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>My_Station__c</fullName>
        <formula>OR(
$User.Station__c =  Owner:User.Station__c,
AND(NOT(ISBLANK(Owner:Queue.QueueName)),CONTAINS($UserRole.Name, Owner:Queue.QueueName))
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>My Station</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Nationality_Full_Name__c</fullName>
        <formula>IF(ISBLANK(Passengerid__r.Nationality_Fullname__c),&quot;Unidentified&quot;,Passengerid__r.Nationality_Fullname__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Nationality Full Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nationality__c</fullName>
        <label>Nationality</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Not_Send_Acknowledge_Email__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checked for disable auto sent acknowledge email.</description>
        <label>Not Send Acknowledge Email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Number_Of_Blocks__c</fullName>
        <description>Displays the number of cases where impact is blocked</description>
        <label>Number Of Blocks</label>
        <summaryFilterItems>
            <field>Case_Group_Member__c.Impact_F__c</field>
            <operation>equals</operation>
            <value>Block</value>
        </summaryFilterItems>
        <summaryForeignKey>Case_Group_Member__c.Caseid__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Number_Of_Completes__c</fullName>
        <description>Displays the number of cases where impact is completed</description>
        <label>Number Of Completes</label>
        <summaryFilterItems>
            <field>Case_Group_Member__c.Impact_F__c</field>
            <operation>equals</operation>
            <value>Complete</value>
        </summaryFilterItems>
        <summaryForeignKey>Case_Group_Member__c.Caseid__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Number_Of_Malfunctions__c</fullName>
        <description>Displays the number of cases where impact is malfunction</description>
        <label>Number Of Malfunctions</label>
        <summaryFilterItems>
            <field>Case_Group_Member__c.Impact_F__c</field>
            <operation>equals</operation>
            <value>Malfunction</value>
        </summaryFilterItems>
        <summaryForeignKey>Case_Group_Member__c.Caseid__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Number_Of_NoActions__c</fullName>
        <description>Displays the number of cases where impact has no value</description>
        <label>Number Of NoActions</label>
        <summaryFilterItems>
            <field>Case_Group_Member__c.Impact_F__c</field>
            <operation>equals</operation>
            <value></value>
        </summaryFilterItems>
        <summaryForeignKey>Case_Group_Member__c.Caseid__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Number_Of_Serviceables__c</fullName>
        <description>Displays the number of cases where impact is serviceable</description>
        <label>Number Of Serviceables</label>
        <summaryFilterItems>
            <field>Case_Group_Member__c.Impact_F__c</field>
            <operation>equals</operation>
            <value>Serviceable</value>
        </summaryFilterItems>
        <summaryForeignKey>Case_Group_Member__c.Caseid__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Orange_Case_Record_Count__c</fullName>
        <description>Displays the number of cases where impact is malfunction</description>
        <label>Orange Case Record Count</label>
        <summaryFilterItems>
            <field>Case_Group_Member__c.Impact__c</field>
            <operation>equals</operation>
            <value>Malfunction</value>
        </summaryFilterItems>
        <summaryForeignKey>Case_Group_Member__c.Caseid__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Other_Flight_Number__c</fullName>
        <description>Displays the other flight number (in the case that flight is not in our system)</description>
        <label>Other Flight Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Over_Booked_Amount__c</fullName>
        <description>Displays the amount of overbooked passenger in the  case</description>
        <formula>IF( Previous_Flight__c &lt;&gt; &quot;&quot;, 
Previous_Flight__r.Over_Booked_Amount_txt__c, 
Flightid__r.Over_Booked_Amount_txt__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Over Booked Amount</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner_Role_Name_2__c</fullName>
        <description>Displays the case owner&apos;s role</description>
        <formula>Owner:User.UserRole.Name</formula>
        <label>Owner Role Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner_Role_Name__c</fullName>
        <description>Displays the case owner&apos;s department</description>
        <formula>Owner:User.Department</formula>
        <label>Owner Department Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner_Station__c</fullName>
        <description>Displays the case owner&apos;s station</description>
        <formula>$User.Station__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Owner Station</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PIR__c</fullName>
        <label>PIR</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PNR__c</fullName>
        <label>PNR</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PV_Attachment_Amount__c</fullName>
        <defaultValue>0</defaultValue>
        <label>PV Attachment Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PartId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Displays the part of the equipment that is related to the case</description>
        <label>Part</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Master_Map__c.Depend_On_Object__c</field>
                <operation>equals</operation>
                <valueField>$Source.EquipmentId__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Master_Map__c</referenceTo>
        <relationshipLabel>Cases (Part)</relationshipLabel>
        <relationshipName>Cases1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PassengerList__c</fullName>
        <label>Passenger List</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Passenger_Country_Code__c</fullName>
        <label>Passenger Country Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Passenger_Email__c</fullName>
        <label>Passenger Email</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Passenger_Mobile__c</fullName>
        <label>Passenger Mobile</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Passenger_Name_Local_Name__c</fullName>
        <formula>IF( ISBLANK(Local_Name__c),  Passengerid__r.Name ,Local_Name__c)</formula>
        <label>Passenger Name/Local Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Passenger_Phone__c</fullName>
        <label>Passenger Phone</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Passenger_Ticket_Number__c</fullName>
        <label>Passenger Ticket Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Passengerid__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Passenger Name</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.Flightid__c</field>
                <operation>equals</operation>
                <valueField>Passenger__c.FlightId__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Passenger__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Payment_Type__c</fullName>
        <label>Payment Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Mileage</fullName>
                </value>
                <value>
                    <fullName>Cash</fullName>
                </value>
                <value>
                    <fullName>Credit Card</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Position_Case_Group_Member__c</fullName>
        <description>Displays the position of all the case group members</description>
        <label>Position</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Position_EN__c</fullName>
        <description>This field is an autorized person&apos;s position in English for Bkk station. Used to be a part of authorized signature.</description>
        <formula>IF(	Owner:User.Station__c != &apos;BKK&apos; &amp;&amp; 
Owner:User.Station__c != &apos;CNX&apos; &amp;&amp; 
Owner:User.Station__c != &apos;HKT&apos; &amp;&amp; 
Owner:User.Station__c != &apos;KBV&apos; &amp;&amp; 
Owner:User.Station__c != &apos;USM&apos;, 
Position_txt__c, 
IF( Text(Authorize_Signature__c) != null, Position_EN_txt__c, Owner:User.Authorized_Position_EN__c)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Position EN</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Position_EN_txt__c</fullName>
        <label>Position EN</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Position_No__c</fullName>
        <description>Used in Maintenance Case Creation. Value input here will be used as a primary Case Group Member</description>
        <label>Position</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Position_TH__c</fullName>
        <description>This field is an autorized person&apos;s position in Thai for non-BKK station. Used to be a part of authorized signature.</description>
        <formula>IF(	Owner:User.Station__c != &apos;BKK&apos; &amp;&amp; 
Owner:User.Station__c != &apos;CNX&apos; &amp;&amp; 
Owner:User.Station__c != &apos;HKT&apos; &amp;&amp; 
Owner:User.Station__c != &apos;KBV&apos; &amp;&amp; 
Owner:User.Station__c != &apos;USM&apos;, 
Position_txt__c, 
IF( Text(Authorize_Signature__c) != null, Position_TH_txt__c, Owner:User.Authorized_Position_TH__c)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Position TH</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Position_TH_txt__c</fullName>
        <label>Position TH</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Position__c</fullName>
        <description>Displayed authorized person&apos;s position which support for both of BKK and non-BKK. This field is used to be a pert of autorized signatue in email and print feature.</description>
        <formula>IF(	Owner:User.Station__c != &apos;BKK&apos; &amp;&amp; 
	Owner:User.Station__c != &apos;CNX&apos; &amp;&amp; 
	Owner:User.Station__c != &apos;HKT&apos; &amp;&amp; 
	Owner:User.Station__c != &apos;KBV&apos; &amp;&amp;
	Owner:User.Station__c != &apos;USM&apos;,
        Position_txt__c,
IF(
Text(Authorize_Signature__c) != null,
IF(
Text(Letter_Language__c) == &quot;TH&quot;,
Position_TH_txt__c ,
Position_EN_txt__c
),
null)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Position</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Position_txt__c</fullName>
        <description>This field is an autorized person&apos;s position for non-BKK station. Used to be a part of authorized signature.</description>
        <label>Position</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Previous_Flight_Date__c</fullName>
        <description>Used to input previous flight date to search for an existing previous flight</description>
        <label>Previous Flight Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Previous_Flight_Number__c</fullName>
        <description>Used to input three digits to indicate the flight number of the previous flight</description>
        <label>Previous Flight Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Previous_Flight__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Displays the previous flight that is related to the case</description>
        <label>Previous Flight</label>
        <referenceTo>Flight__c</referenceTo>
        <relationshipLabel>Cases (Previous Flight)</relationshipLabel>
        <relationshipName>Previous_Flight</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Previous_Flight_txt__c</fullName>
        <label>Previous Flight</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Profile_Name__c</fullName>
        <description>Displays the case owner&apos;s profle</description>
        <formula>Owner:User.Profile.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Owner Profile Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ROP_Award_Code__c</fullName>
        <description>What ROP Award Code was used to burn mile in this case</description>
        <label>ROP Award Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ROP_Number__c</fullName>
        <label>ROP Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ROP_Tier_F__c</fullName>
        <formula>Passengerid__r.FFP_Tier__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ROP Tier</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ROP_Tier__c</fullName>
        <label>ROP Tier</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Red_Case_Record_Count__c</fullName>
        <description>Displays the number of cases with actions being blocked</description>
        <label>Red Case Record Count</label>
        <summaryFilterItems>
            <field>Case_Group_Member__c.Impact__c</field>
            <operation>equals</operation>
            <value>Block</value>
        </summaryFilterItems>
        <summaryForeignKey>Case_Group_Member__c.Caseid__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Report_Lack_of_Part__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used in storing the last value from lack of part before being cleared by changing action to complete</description>
        <label>Report Lack of Part</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Report_Lack_of_Time__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used in storing the last value from lack of time before being cleared by changing action to complete</description>
        <label>Report Lack of Time</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Reported_By_Crew__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Reported By Crew</label>
        <referenceTo>Crew__c</referenceTo>
        <relationshipLabel>Cases (Reported By Crew)</relationshipLabel>
        <relationshipName>Cases1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Role_Name__c</fullName>
        <formula>CreatedBy.UserRole.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Role Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Roll_Up_Block_Impact__c</fullName>
        <label>Roll Up Block Impact</label>
        <summaryForeignKey>Case_Group_Member__c.Caseid__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Root_Cause_CTI__c</fullName>
        <description>Cause of case which from Investigate Result (Manual input by SZ-R)</description>
        <label>Root Cause</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Investigation_Type__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Accident during take off/landing</fullName>
                </value>
                <value>
                    <fullName>In-flight equipment</fullName>
                </value>
                <value>
                    <fullName>Item falls from overhead locker</fullName>
                </value>
                <value>
                    <fullName>Performance of staff</fullName>
                </value>
                <value>
                    <fullName>Turbulence</fullName>
                </value>
                <value>
                    <fullName>Others</fullName>
                </value>
                <value>
                    <fullName>Equipment problem</fullName>
                </value>
                <value>
                    <fullName>Irregularities of flights</fullName>
                </value>
                <value>
                    <fullName>Regulation concerned</fullName>
                </value>
                <value>
                    <fullName>In-flight Entertainment</fullName>
                </value>
                <value>
                    <fullName>Seat</fullName>
                </value>
                <value>
                    <fullName>Health Problem</fullName>
                </value>
                <value>
                    <fullName>Late at boarding</fullName>
                </value>
                <value>
                    <fullName>Late at check-in</fullName>
                </value>
                <value>
                    <fullName>Overbooking flight</fullName>
                </value>
                <value>
                    <fullName>Drunk PAX</fullName>
                </value>
                <value>
                    <fullName>Uncoopreative PAX</fullName>
                </value>
                <value>
                    <fullName>Harassment behaviour</fullName>
                </value>
                <value>
                    <fullName>Piece/Weight/Size concept policy</fullName>
                </value>
                <value>
                    <fullName>Accommodation not provided</fullName>
                </value>
                <value>
                    <fullName>Alternative flights</fullName>
                </value>
                <value>
                    <fullName>Assistant during delayed</fullName>
                </value>
                <value>
                    <fullName>Information during delayed</fullName>
                </value>
                <value>
                    <fullName>Meal</fullName>
                </value>
                <value>
                    <fullName>Expired food</fullName>
                </value>
                <value>
                    <fullName>Foreign objects in food</fullName>
                </value>
                <value>
                    <fullName>Ingredients in special meal</fullName>
                </value>
                <value>
                    <fullName>Quality of meal</fullName>
                </value>
                <value>
                    <fullName>Rotten/Mold food</fullName>
                </value>
                <value>
                    <fullName>Special meal not provided</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>S4_Tier1_Group_B_receive_time__c</fullName>
        <description>Time that use S4 Tier 1 Group B receive case</description>
        <label>S4Tier1GroupB receive time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>S4_Tier_1_Group_A_receive_time__c</fullName>
        <description>Time that user S4 Tier 1 Group A receive case</description>
        <label>S4Tier1GroupA receive time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>S4_Tier_1_Receive_Time__c</fullName>
        <description>Time that use S4 Tier 1 receive case</description>
        <formula>IF( Escalate_by_Role__c = &apos;S4 Tier 1 Group A&apos;,
  S4_Tier_1_Group_A_receive_time__c , 
  S4_Tier1_Group_B_receive_time__c
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>S4 Tier 1 Receive Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SEQ_No_Date__c</fullName>
        <description>Used to input the date used as a part of the sequence number</description>
        <label>SEQ No. Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SEQ_No_Display__c</fullName>
        <externalId>true</externalId>
        <label>Seq No.</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>SEQ_No_txt__c</fullName>
        <description>Used to input the three running digits in the log book sed as a part of the sequence number</description>
        <label>SEQ No. Input</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SEQ__c</fullName>
        <description>Displays the sequence number for maintenance cases</description>
        <formula>HYPERLINK(&quot;javascript:srcUp(&apos;/&quot; &amp; Id &amp; &quot;&apos;)&quot;,  SEQ_No_Display__c, &quot;_self&quot; )</formula>
        <label>SEQ No.</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>STA__c</fullName>
        <formula>Flightid__r.STA__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>STA</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>STD__c</fullName>
        <formula>Flightid__r.STD__c</formula>
        <label>STD</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SUM_Compensation_Cash_Amount__c</fullName>
        <label>SUM Compensation Cash Amount</label>
        <summarizedField>Compensation__c.Amount__c</summarizedField>
        <summaryFilterItems>
            <field>Compensation__c.Status__c</field>
            <operation>equals</operation>
            <value>Approved</value>
        </summaryFilterItems>
        <summaryForeignKey>Compensation__c.CaseId__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>SUM_Involved_Passenger_Amount__c</fullName>
        <label>SUM Involved Passenger Amount</label>
        <summaryForeignKey>Case_Group_Member__c.Caseid__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Safety_Zone__c</fullName>
        <description>for Mobile</description>
        <label>Safety Zone</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sector__c</fullName>
        <formula>if(Flightid__r.Sector__c == &quot;-&quot; || Flightid__r.Sector__c == null,&quot;XXX&quot;,Flightid__r.Sector__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sector</label>
        <type>Text</type>
    </fields>
</CustomObject>